--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
+    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
