--- a/Gadget-Grammar/package.json
+++ b/Gadget-Grammar/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "vue": "^3.3.4",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "vuex-plugin-persistedstate": "^1.0.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
