--- a/Gadget-Grammar/package.json
+++ b/Gadget-Grammar/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --dom"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -19,6 +20,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
-    "vite": "^4.4.9"
+    "@vue/test-utils": "^2.4.2",
+    "axios-mock-adapter": "^1.22.0",
+    "happy-dom": "^12.10.3",
+    "vite": "^4.4.9",
+    "vitest": "^0.34.6"
   }
 }
