--- a/Gadget-Grammar/package.json
+++ b/Gadget-Grammar/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest --dom"
+    "test": "vitest --dom",
+    "coverage": "vitest run --coverage",
+    "test-ui": "vitest --ui --coverage.enabled=true"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -20,6 +22,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
+    "@vitest/coverage-v8": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
     "@vue/test-utils": "^2.4.2",
     "axios-mock-adapter": "^1.22.0",
     "happy-dom": "^12.10.3",
